fix: overflow-wrap: anywhere on original URL

--- a/http/assets/css/style.css
+++ b/http/assets/css/style.css
@@ -160,6 +160,10 @@ table {
     width: 100%;
 }
 
+.original-url {
+    overflow-wrap: anywhere;
+}
+
 .fake-a {
     background: none;
     border: none;
